--- a/projects/happyfarm/index.html
+++ b/projects/happyfarm/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Swipe Land - Happy Farm | Vadym Verloka</title>
     <meta charset="utf-8" />
@@ -15,6 +16,7 @@
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
 </head>
+
 <body class="is-preload">
     <div id="page-wrapper">
         <header id="header"></header>
@@ -24,12 +26,17 @@
         <section id="main" class="wrapper style2">
             <div class="inner">
                 <header class="major special">
-                    <h1>Swipe Land - Happy Farm</h1>
+                    <h1>
+                        Swipe Land - Happy Farm
+                        <code>Gaming</code>
+                    </h1>
                     <p>Tile matching game for Android</p>
                 </header>
                 <a href="#" class="image main"><img src="../../images/app/swlhd.png" alt="" /></a>
-                <p>Game for Android on the Unity engine. The implementation of the already classic game mechanics - Match-3. The app is now available on Google Play.</p>
-                <center><a href="https://play.google.com/store/apps/details?id=com.verloka.swipeland.happyfarm"><img src="../../images/google-play-badge.png" alt="" width="256"/></a></center>				
+                <p>Game for Android on the Unity engine. The implementation of the already classic game mechanics -
+                    Match-3. The app is now available on Google Play.</p>
+                <center><a href="https://play.google.com/store/apps/details?id=com.verloka.swipeland.happyfarm"><img
+                            src="../../images/google-play-badge.png" alt="" width="256" /></a></center>
             </div>
         </section>
 
@@ -47,4 +54,5 @@
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
 </body>
+
 </html>
