--- a/projects/incomeexpenses/index.html
+++ b/projects/incomeexpenses/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Income&Expenses | Vadym Verloka</title>
     <meta charset="utf-8" />
@@ -15,6 +16,7 @@
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
 </head>
+
 <body class="is-preload">
     <div id="page-wrapper">
         <header id="header"></header>
@@ -24,17 +26,24 @@
         <section id="main" class="wrapper style2">
             <div class="inner">
                 <header class="major special">
-                    <h1>Income&Expenses</h1>
+                    <h1>
+                        Income&Expenses
+                        <code>Accounting</code>
+                    </h1>
                     <p>Easy to use the Budget Planner</p>
                 </header>
                 <a href="#" class="image main"><img src="../../images/app/incexp.jpg" alt="" /></a>
                 <p>
-                    Allows you to control costs, keep track of income, save purchase history in the form of expenses. It is also possible to compare different items of expenses or income with similar ones for different periods.
+                    Allows you to control costs, keep track of income, save purchase history in the form of expenses. It
+                    is also possible to compare different items of expenses or income with similar ones for different
+                    periods.
                     Allows you to keep history for more than one year. Shows the current state of balance.
-                    This application stores its data in your OneDrive cloud. This allows you to use the application on different devices on Windows and synchronize data between them.
+                    This application stores its data in your OneDrive cloud. This allows you to use the application on
+                    different devices on Windows and synchronize data between them.
                 </p>
 
-                <center><a href="https://www.microsoft.com/store/apps/9PH2MP1W0138"><img src="../../images/windows-store-button.png" alt="" width="256"></a></center>
+                <center><a href="https://www.microsoft.com/store/apps/9PH2MP1W0138"><img
+                            src="../../images/windows-store-button.png" alt="" width="256"></a></center>
 
             </div>
         </section>
@@ -53,4 +62,5 @@
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
 </body>
+
 </html>
