--- a/projects/wallpaper/index.html
+++ b/projects/wallpaper/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Wallpaper Changer 2 | Vadym Verloka</title>
     <meta charset="utf-8" />
@@ -15,6 +16,7 @@
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
 </head>
+
 <body class="is-preload">
     <div id="page-wrapper">
         <header id="header"></header>
@@ -24,18 +26,25 @@
         <section id="main" class="wrapper style2">
             <div class="inner">
                 <header class="major special">
-                    <h1>Wallpaper Changer 2</h1>
+                    <h1>
+                        Wallpaper Changer 2
+                        <code>Tools</code>
+                    </h1>
                     <p>Application for wallpaper managmend</p>
                 </header>
                 <a href="#" class="image main"><img src="../../images/app/wpch.jpg" alt="" /></a>
                 <p>
                     The application for installing HD wallpapers on your desktop.
-                    In the application, you can configure the replacement of wallpaper on a schedule. Select one of several image sources. Liked wallpaper can be added to favorites, so that you can then install them again.
-                    In Walpaper Chnager 2 there is a parametric search for images by color, by tag (available in one of the wallpaper sources). The application runs in the background and does not take a lot of resources.
+                    In the application, you can configure the replacement of wallpaper on a schedule. Select one of
+                    several image sources. Liked wallpaper can be added to favorites, so that you can then install them
+                    again.
+                    In Walpaper Chnager 2 there is a parametric search for images by color, by tag (available in one of
+                    the wallpaper sources). The application runs in the background and does not take a lot of resources.
 
                 </p>
 
-                <center><a href="https://www.microsoft.com/en-us/p/wallpaper-changer-2/9mz0zkr55f9g"><img src="../../images/windows-store-button.png" alt="" width="256"></a></center>
+                <center><a href="https://www.microsoft.com/en-us/p/wallpaper-changer-2/9mz0zkr55f9g"><img
+                            src="../../images/windows-store-button.png" alt="" width="256"></a></center>
 
             </div>
         </section>
@@ -54,4 +63,5 @@
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
 </body>
+
 </html>
