--- a/projects/exchange/index.html
+++ b/projects/exchange/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Exchange CMS | Vadym Verloka</title>
     <meta charset="utf-8" />
@@ -15,6 +16,7 @@
     <meta property="og:locale:alternate" content="ru-RU" />
     <meta property="og:image" content="../../images/og.jpg" />
 </head>
+
 <body class="is-preload">
     <div id="page-wrapper">
         <header id="header"></header>
@@ -24,20 +26,25 @@
         <section id="main" class="wrapper style2">
             <div class="inner">
                 <header class="major special">
-                    <h1>Exchange CMS</h1>
+                    <h1>
+                        Exchange CMS
+                        <code>Social network</code>
+                    </h1>
                     <p>Q&A Engine</p>
                 </header>
                 <a href="#" class="image main"><img src="../../images/app/exc.jpg" alt="" /></a>
-                <p>Exchange CMS is a stunning, professional, and flexible social questions and answers .NET application specially designed for Online Communities, Niche Questions and Answers Websites, Marketing Websites, Developers Websites, or any kind of Social Communities.</p>
+                <p>Exchange CMS is a stunning, professional, and flexible social questions and answers .NET application
+                    specially designed for Online Communities, Niche Questions and Answers Websites, Marketing Websites,
+                    Developers Websites, or any kind of Social Communities.</p>
                 <h4>Important functions</h4>
-				<ul>
-					<li>Adaptive design.</li>
-					<li>User rating system.</li>
-					<li>Support for MS SQL, MySQL and PostgreSQL databases.</li>
-					<li>Website personalization for the user.</li>
-					<li>Content complaints system.</li>
-					<li>Complex caching mechanism improves performance on weak servers.</li>
-				</ul>
+                <ul>
+                    <li>Adaptive design.</li>
+                    <li>User rating system.</li>
+                    <li>Support for MS SQL, MySQL and PostgreSQL databases.</li>
+                    <li>Website personalization for the user.</li>
+                    <li>Content complaints system.</li>
+                    <li>Complex caching mechanism improves performance on weak servers.</li>
+                </ul>
             </div>
         </section>
 
@@ -55,4 +62,5 @@
     <script src="../../assets/js/util.js"></script>
     <script src="../../assets/js/main.js"></script>
 </body>
+
 </html>
