--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,6 +31,7 @@
                     <li>
                         <h3>All</h3>
                         <div class="gallery">
+							<a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
 							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
 							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
                             <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
@@ -44,6 +45,7 @@
                     <li>
                         <h3>Commercial</h3>
                         <div class="gallery">
+							<a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
 							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
 							<a href="https://verloka.com/projects/rozmovy/"><img src="../images/app/sp.jpg" alt="Rozmovy" /></a>
                             <a href="https://verloka.com/projects/tariscope/"><img src="../images/app/ts.jpg" alt="Tariscope" /></a>
