--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,6 +31,7 @@
                     <li>
                         <h3>All</h3>
                         <div class="gallery">
+                            <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
                             <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
 							<a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
 							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
@@ -46,6 +47,7 @@
                     <li>
                         <h3>Commercial</h3>
                         <div class="gallery">
+                            <a href="https://verloka.com/projects/pecp/"><img src="../images/app/pecp.jpg" alt="Packaging Platform" /></a>
                             <a href="https://verloka.com/projects/dao/"><img src="../images/app/dao.jpg" alt="Digital Applicant Onboarding" /></a>
 							<a href="https://verloka.com/projects/careerfinance/"><img src="../images/app/cfc.jpg" alt="Liberty Career Finance" /></a>
 							<a href="https://verloka.com/projects/aspirecore/"><img src="../images/app/ac.jpg" alt="Aspire Core" /></a>
