--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div id="page-wrapper">
         <header id="header" class="alt"></header>
         <nav id="menu"></nav>
-
         <!--content-->
         <section id="banner">
             <div class="inner">
@@ -36,7 +35,7 @@
     </div>
 
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/loader.js"></script>
+    <script src="assets/js/loader.js?20240813"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/jquery.selectorr.min.js"></script>
