--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/loader.js?20240813"></script>
+    <script src="assets/js/loader.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
     <script src="assets/js/jquery.selectorr.min.js"></script>
